@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

class TransactCommand {
    - {static} logger: Logger
    - input: String
    - transactionStorage: TransactionStorage
    + TransactCommand(input: String, transactionStorage: TransactionStorage)
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

class ItemList {
    + size(): int
    + getItem(index: int): Item
}

class Item {
    + getQuantity(): int
    + setQuantity(quantity: int): void
    + getDescription(): String
}

interface Validator <<interface>> {
    + validate(items: ItemList, categories: CategoryList): void
}

class TransactCommandValidator {
    - input: String
    + TransactCommandValidator(input: String)
    + validate(items: ItemList, categories: CategoryList): void
}

class TransactionStorage {
    + saveHistory(itemName: String, change: int): void
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. TransactCommand
Validator <|.. TransactCommandValidator

TransactCommand .right.> TransactCommandValidator : <<creates>>
TransactCommandValidator ..> ItemList : reads >
TransactCommand .> Item : modifies >
TransactCommand ..> ItemList : reads >
TransactCommand ..> TransactionStorage : <<uses>>
TransactCommand ..> Ui : <<uses>>

@enduml